--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ sudo: false
 language: php
 php:
   - '7.0'
-script: phpunit
+script:
+  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
+ 
+after_script:
+  - php vendor/bin/coveralls -v
+
+before_install:
+  - composer require phpunit/phpunit:4.8.* satooshi/php-coveralls:dev-master
+  - composer install --dev
 before_script:
   - composer install
