corrected package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reddogsk/reddogs-test",
+    "name": "reddogs-at/reddogs-test",
     "description": "Test Classes",
     "type": "library",
     "license": "MIT",
