changed travis setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,21 @@
-sudo: false
 language: php
-php:
-  - '7.0'
-script:
-  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
- 
-after_script:
-  - php vendor/bin/coveralls -v
 
-before_install:
-  - composer require phpunit/phpunit satooshi/php-coveralls:dev-master
-  - composer install --dev
-before_script:
-  - composer install
+sudo: false
+
+cache:
+  directories:
+  - vendor
+
+php:
+  - 7.0
+  - 7.1
+
+install:
+  - travis_retry composer install --no-interaction --prefer-source
+
+script:
+  - vendor/bin/phpunit
+
+branches:
+  only:
+    - master
