--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,10 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": "^5.6 || ^7.0"
-    },
-    "require-dev": {
+        "php": "^7.0",
         "phpunit/phpunit": "^6",
         "zendframework/zend-servicemanager": "^3.1",
-        "mtymek/expressive-config-manager": "^0.4.0"
+        "zendframework/zend-config-aggregator": "^0.2.0"
     },
     "autoload": {
       "psr-4": {
